[tool.poetry]
name = "jax-pf"
version = "0.1.0"
description = ""
authors = ["Hongrui Zheng <billyzheng.bz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = {extras = ["cuda12"], version = "^0.6.1"}
chex = "^0.1.89"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
