[project]
name = "jax-pf"
version = "0.1.0"
description = ""
authors = [{ name = "Hongrui Zheng", email = "billyzheng.bz@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "jax[cuda12]>=0.6.1,<0.7",
    "chex>=0.1.89,<0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9",
    "requests>=2.32.4,<3",
    "pyyaml>=6.0.2,<7",
    "pillow>=11.2.1,<12",
    "matplotlib>=3.10.3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
